--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +17,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +29,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,6 +52,12 @@ section {
    padding-bottom: 10vh; 
    line-height: 2em;
    padding-left: 30px;
+   font-family: var(--fonte3);
+   font-size: 3.5vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -50,11 +68,26 @@ section.normal {
 section.imagem {
     background-color: rgb(59, 59, 59);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.315);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.61);
+    text-shadow: 2px, 2px, 0px, black;
+}
+
+section#img01 {
+   background-image: url(../imagens/background001.jpg);
+   background-position: right, center;
+   background-size: cover
+}
+
+section#img02 {
+   background-image: url(../imagens/background002.jpg);
+   background-size: cover;
 }
 
 footer {
